--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
   <version>1.0-SNAPSHOT</version>
   <name>MTG DB</name>
   <properties>
-        <jdbc.driver>com.mysql.jdbc.Driver</jdbc.driver>
-        <jdbc.url>jdbc:mysql://localhost/mtgdb_dev</jdbc.url>
-        <jdbc.user>mtgdb</jdbc.user>
-        <jdbc.password>password</jdbc.password>
-
-        <jdbc.test.url>jdbc:mysql://localhost/mtgdb_test</jdbc.test.url>
+    <jdbc.driver>com.mysql.jdbc.Driver</jdbc.driver>
+    <jdbc.url>jdbc:mysql://localhost/mtgdb_dev</jdbc.url>
+    <jdbc.user>mtgdb</jdbc.user>
+    <jdbc.password>password</jdbc.password>
+    
+    <jdbc.test.url>jdbc:mysql://localhost/mtgdb_test</jdbc.test.url>
   </properties>
   <dependencies>
     <dependency>
@@ -93,6 +93,32 @@
             </goals>
           </execution>
 	</executions>
+      </plugin>
+      <plugin>
+	<groupId>com.googlecode.flyway</groupId>
+	<artifactId>flyway-maven-plugin</artifactId>
+	<version>2.1.1</version>
+	<configuration>
+	  <url>${jdbc.url}</url>
+	  <user>${jdbc.user}</user>
+	  <password>${jdbc.password}</password>
+	  <schemas>
+	    <schema>mtgdb</schema>
+	  </schemas>
+          <locations>
+            <location>filesystem:src/main/db/migration</location>
+          </locations>
+	  <target>1.0</target>
+	</configuration>
+	<dependencies>
+	  <dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.17</version>
+	    <type>jar</type>
+	    <scope>compile</scope>
+	  </dependency>
+	</dependencies>
       </plugin>
     </plugins>
   </build>
