--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+	  <groupId>org.freemarker</groupId>
+	  <artifactId>freemarker</artifactId>
+	  <version>2.3.14</version>
+    </dependency>
+    <dependency>
       <groupId>org.javalite</groupId>
       <artifactId>activejdbc</artifactId>
       <version>1.4.5</version>
